--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ionic/angular": "^5.6.14",
     "firebase": "^8.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
