--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@capacitor/android": "3.2.0",
+    "@capacitor/app": "1.0.2",
+    "@capacitor/core": "3.2.0",
+    "@capacitor/haptics": "1.0.2",
+    "@capacitor/keyboard": "1.0.2",
+    "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.6.14",
     "firebase": "^8.8.1",
     "rxjs": "~6.6.0",
@@ -32,6 +38,7 @@
     "@angular-devkit/build-angular": "~12.0.2",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
+    "@capacitor/cli": "3.2.0",
     "@types/googlemaps": "3.39.12",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
